--- a/syteline-api-example-01/syteline-api-example-01.csproj
+++ b/syteline-api-example-01/syteline-api-example-01.csproj
@@ -3,7 +3,7 @@
   <PropertyGroup>
     <OutputType>Exe</OutputType>
     <TargetFramework>net8.0</TargetFramework>
-    <RootNamespace>syteline_api_example</RootNamespace>
+    <RootNamespace>syteline_api_example_01</RootNamespace>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
       <LangVersion>latest</LangVersion>
